k8s/deployment-label-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${APP_ID}-deployment
  namespace: ${KUBE_NAMESPACE}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ${APP_ID}
  template:
    metadata:
      labels:
        app: ${APP_ID}
    spec:
      containers:
      - name: ${APP_ID}
        image: ${DOCKER_USERNAME}/${APP_ID}:${VERSION}
        ports:
        - containerPort: ${API_PORT}
        startupProbe:
          exec:
            command:
            - /bin/sh
            - -c
            - curl -s --fail --max-time 2 "http://localhost:${API_PORT}/${ROOT_PATH}/health" | egrep -q '${APP_KEYWORD}'
          initialDelaySeconds: 15
          periodSeconds: 5
          failureThreshold: 20
        livenessProbe:
          exec:
            command:
            - /bin/sh
            - -c
            - curl -s --fail --retry-delay 0 --max-time 2 --retry 30 --retry-max-time 60 "http://localhost:${API_PORT}/${ROOT_PATH}/health" | egrep -q '${APP_KEYWORD}'
          initialDelaySeconds: 15
          periodSeconds: 15
          failureThreshold: 10
          timeoutSeconds: 60
        securityContext:
          runAsUser: 1000
          capabilities:
            drop:
              - all
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
        volumeMounts:
        - name: ${APP_ID}-config
          mountPath: /home/node/packages/courDeCassation/environments
          readOnly: true
      volumes:
      - name: ${APP_ID}-config
        secret:
          secretName: ${APP_ID}-config
