k8s/ingress-local-label-backend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${APP_ID}-ingress
  namespace: ${KUBE_NAMESPACE}
spec:
  rules:
  - host: ${APP_HOST}
    http:
      paths:
      - path: /${ROOT_PATH}
        pathType: Prefix
        backend:
          service:
            name: ${APP_ID}-svc
            port:
              number: 80
